fixed layout issues

--- a/style.css
+++ b/style.css
@@ -3,26 +3,48 @@ body {
 	background-repeat: no-repeat;
 	background-position: center;
 	color: #000;
-	font-family: 'Roboto', sans-serif; /* weight 300, 400, 500, 700 / italc */
-}
+	font-family: 'Roboto', sans-serif; /* weight 300, 400, 500, 700 / italc */}
 
-header {
-	text-align: center;
-	height: 135px;
-	width: 100%;
-}
-
-.title {
+.main-page {
 	background: rgba(0, 0, 0, 0.7);
-	width: 100%;
-	margin-top: 55px;
-	height: 130px;
+	display: block;
+	width: 60%;
+	margin: 0 auto;
 }
 
 .title-image{
-	height: 130px;
-	width: 600px;
-	margin-top: 3px;
+	height: 110px;
+	width: 550px;
+	display: block;
+	margin: 0 auto;
+}
+
+.board {
+	margin: 0 auto;
+	width: 80%;
+	display: block;
+	padding: 10px;
+	height: 600px;
+	white-space: nowrap;
+}
+
+.card {
+	background-size: contain;
+	background-repeat: no-repeat;
+	width: 120px;
+	height: 155px;
+	text-align: center;
+	cursor: pointer;
+	margin: 5px;
+	display: inline-block;
+}
+
+.character {
+	background-image: url("images/harry.png");
+}
+
+.facedown {
+	background-image: url("images/facedown_card.png");
 }
 
 .new-game-button {
@@ -38,44 +60,6 @@ header {
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
-
-.board {
-	margin: 0 auto;
-	width: 60%;
-	display: block;
-	padding: 10px;
-	margin-top: 20px;
-	margin-bottom: 100px;
-	white-space: nowrap;
-}
-
-.row-1, .row-2 {
-	margin: 0 auto;
-	width: 100%;
-	display: block;
-	white-space: nowrap;
-}
-
-.card {
-	background-size: contain;
-	background-repeat: no-repeat;
-	width: 130px;
-	height: 165px;
-	text-align: center;
-	cursor: pointer;
-	margin: 5px;
-	display: inline-block;
-	vertical-align: middle;
-}
-
-.character {
-	background-image: url("images/harry.png");
-}
-
-.facedown {
-	background-image: url("images/facedown_card.png");
-}
-
 
 
 
